[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subd-db = { path = "crates/subd-db" }
subd-twitch = { path = "crates/subd-twitch" }
subd-types = { path = "crates/subd-types" }
subd-macros = { path = "crates/subd-macros" }
subd-audio = { path = "crates/subd-audio" }
subd-openai = { path = "crates/subd-openai" }
twitch_chat = { path = "crates/twitch_chat" }
twitch_service = { path = "crates/twitch_service" }
twitch_stream_state = { path = "crates/twitch_stream_state" }
user_service = { path = "crates/user_service" }
events = { path = "crates/events" }
stable_diffusion = { path = "crates/stable_diffusion" }
fal_ai = { path = "crates/fal_ai" }
ai_scenes_coordinator = { path = "crates/ai_scenes_coordinator" }
obs_service = { path = "crates/obs_service" }
stream_character = { path = "crates/stream_character" }
ai_playlist = { path = "crates/ai_playlist" }
ai_images = { path = "crates/ai_images" }
ai_clones = { path = "crates/ai_clones" }
subd-elevenlabs = { path = "crates/subd-elevenlabs" }
obs_move_transition = { path = "crates/obs_move_transition" }
obs_bootstrap = { path = "crates/obs_bootstrap" }
skybox = { path = "crates/skybox" }

# Twitch Deps
twitch-irc.workspace = true
anyhow.workspace = true
once_cell.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx.workspace = true
tokio.workspace = true
tungstenite.workspace = true
tokio-tungstenite.workspace = true
uuid.workspace = true
obws = "0.10"

csv = "1.1"
chrono = "*"
axum = "0.5.4"
futures = "0.3.21"
# fal-rust = { git = "https://github.com/davidbegin/fal-rust" }
fal-rust = { path = "../fal-rust" }

# Fixes skip bug skip_one
rodio = { git = "https://github.com/RustAudio/rodio", rev = "023ee21e21808685336b654a1c167ea0c182b4e8", default-features = false, features = [ "symphonia-all" ] }

clap = { version = "4.4.11", features = ["derive"] }
youtube_dl = { git = "https://github.com/twiclo/youtube-dl-rs", rev = "dbb9a878208175dee95533a6d2bd02344b8094bf", default-features = false, features = [ "yt-dlp" ] }
psl = "2.0.89"
rustrict = { version = "0.4.18", features = [ "customize" ] }

# Tracing related crates
tracing.workspace = true
tracing-subscriber.workspace = true
rand = "0.8.5"
async-trait.workspace = true
twitter-v2 = "0.1.8"
elevenlabs-api = "0.1.1"
## elevenlabs-api = { path = "../elevenlabs-api" }
libc = "0.2.150"
# openai = "1.0.0-alpha.13"
openai = { path = "../openai" }
twitch_api = "0.7.0-rc.7"
twitch_oauth2 = "0.12.7"
askama = "0.12.1"
base64 = "0.21.5"
num-traits = "0.2.17"
serde_repr = "0.1.18"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
case = "1.0.0"
convert_case = "0.6.0"
url = "2.5.2"
regex = "1.10.6"
time = "0.3.36"

[workspace]
members = ["crates/*"]

[workspace.dependencies]

anyhow = "1.0.57"
async-trait = "0.1.57"
chrono = { version = "0.4.19", features = [ "serde" ] }
dotenv = "0.15.0"
futures = "0.3.21"
once_cell = "1.13.0"
reqwest = { version = "0.11.11", features = ["stream","multipart","json"] }
serde = { version = "1.0.1" }
serde_json = "1.0.79"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time", "bigdecimal"] }
tracing = "0.1"
tracing-subscriber = "0.3"
uuid = { version = "1.0.0", features = [ "v4", "serde" ] }

tokio = { version = "1.18", features = [ "macros", "rt" ] }
tungstenite = { version = "0.17.2", features = [ "native-tls" ] }
tokio-tungstenite = { version = "0.17.1", features = [ "native-tls" ] }

twitch-irc = { version = "4.0.0", default-features = false, features = [
    "with-serde",
    "refreshing-token-rustls-native-roots",
    "transport-tcp-rustls-native-roots"
] }
twitch_api2 = { version = "0.6.1", features = [ "helix", "twitch_oauth2", "reqwest", "pubsub", "tmi" ]}

[lib]
path = "src/lib.rs"
