[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]

ai_clones = { path = "crates/ai_clones" }
ai_images = { path = "crates/ai_images" }
ai_music_videos = { path = "crates/ai_music_videos" }
ai_playlist = { path = "crates/ai_playlist" }
ai_scenes_coordinator = { path = "crates/ai_scenes_coordinator" }
ai_songs_vote = { path = "crates/ai_songs_vote" }
ai_telephone = { path = "crates/ai_telephone" }
events = { path = "crates/events" }
fal_ai = { path = "crates/fal_ai" }
obs_3d_filter = { path = "crates/obs_3d_filter" }
obs_bootstrap = { path = "crates/obs_bootstrap" }
obs_move_transition = { path = "crates/obs_move_transition" }
obs_service = { path = "crates/obs_service" }
skybox = { path = "crates/skybox" }
stable_diffusion = { path = "crates/stable_diffusion" }
stream_character = { path = "crates/stream_character" }
subd-audio = { path = "crates/subd-audio" }
subd-db = { path = "crates/subd-db" }
subd-elevenlabs = { path = "crates/subd-elevenlabs" }
subd-macros = { path = "crates/subd-macros" }
subd-openai = { path = "crates/subd-openai" }
subd-suno = { path = "crates/subd-suno" }
subd-twitch = { path = "crates/subd-twitch" }
subd-types = { path = "crates/subd-types" }
subd-utils= { path = "crates/subd-utils" }
twitch_chat = { path = "crates/twitch_chat" }
twitch_service = { path = "crates/twitch_service" }
twitch_stream_state = { path = "crates/twitch_stream_state" }
user_service = { path = "crates/user_service" }

anyhow.workspace = true
once_cell.workspace = true
reqwest.workspace = true
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = ["full"] }
tokio-tungstenite.workspace = true
tungstenite.workspace = true
twitch-irc.workspace = true
uuid.workspace = true

askama = "0.12.1"
async-trait.workspace = true
axum = { version = "*", features = ["macros", "ws"] }
axum-extra = { version = "*", features=["typed-header"] }
chrono = "*"
clap = { version = "4.4.11", features = ["derive"] }
colored = "2.1.0"
elevenlabs-api = { path = "../elevenlabs-api" }
futures = "0.3"
headers = "0.4"
instruct-macros = "0.1.8"
instruct-macros-types = "0.1.8"
instructor-ai = "0.1.8"
minijinja = { version = "2.3.1", features = ["builtins", "loader"] }
num-traits = "0.2.17"
obws = "0.10"
openai = { path = "../openai" }
openai-api-rs = "4.1.0"
psl = "2.0.89"
rand = "0.8.5"
rustrict = { version = "0.4.18", features = [ "customize" ] }
time = "0.3.36"
tower-http = { version = "0.6.1", features = ["fs", "trace", "cors"] }
tracing-subscriber.workspace = true
tracing.workspace = true
twitch_api = "0.7.0-rc.7"
twitter-v2 = "0.1.8"
url = "2.5.2"

# Fixes skip bug skip_one
rodio = { git = "https://github.com/RustAudio/rodio", rev = "023ee21e21808685336b654a1c167ea0c182b4e8", default-features = false, features = [ "symphonia-all" ] }

youtube_dl = { git = "https://github.com/twiclo/youtube-dl-rs", rev = "dbb9a878208175dee95533a6d2bd02344b8094bf", default-features = false, features = [ "yt-dlp" ] }

# This broken for me
# kalosm = { git = "https://github.com/floneum/floneum.git", rev = "0b51b6b347bc5653958669951402226c3c38b9e8" }
# elevenlabs-api = "0.1.1"
# openai = "1.0.0-alpha.13"
# tokio-tungstenite = "0.24.0"
# axum = { version= "0.5.4", features = ["macros"]}
# axum = { version = "0.7.*", features = ["macros", "ws"] }
# axum = "0.7.7"
# futures = "0.3.21"

[workspace]

members = ["crates/*"]

[workspace.dependencies]

anyhow = "1.0.57"
async-trait = "0.1.57"
chrono = { version = "0.4.19", features = [ "serde" ] }
colored = "2.1.0"
dotenv = "0.15.0"
futures = "0.3.21"
once_cell = "1.13.0"
reqwest = { version = "0.11.11", features = ["stream","multipart","json"] }
serde = { version = "1.0.1" }
serde_json = "1.0.79"
sqlx = { version = "0.6", features = [ "runtime-tokio-rustls", "postgres", "uuid", "time", "bigdecimal"] }
tokio = { version = "1.18", features = [ "macros", "rt" ] }
tokio-tungstenite = { version = "0.17.1", features = [ "native-tls" ] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tungstenite = { version = "0.17.2", features = [ "native-tls" ] }
twitch-irc = { version = "4.0.0", default-features = false, features = [ "with-serde", "refreshing-token-rustls-native-roots", "transport-tcp-rustls-native-roots" ] }
twitch_api2 = { version = "0.6.1", features = [ "helix", "twitch_oauth2", "reqwest", "pubsub", "tmi" ]}
uuid = { version = "1.0.0", features = [ "v4", "serde" ] }

[lib]

path = "src/lib.rs"
