[package]
name = "server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.57"
axum = "0.5.4"
chrono = { version = "0.4.19", features = [ "serde" ] }
futures = "0.3.21"
irc = { version = "0.15.0", features = [ "serde", "serde_derive", "json", "serde_json" ] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.79"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite" ] }
tokio = { version = "1.18", features = [ "macros", "rt" ] }
tungstenite = "0.17.2"
tokio-tungstenite = "0.17.1"
subd-db = { path = "crates/subd-db" }
subd-gh = { path = "crates/subd-gh" }
subd-twitch = { path = "crates/subd-twitch" }
subd-yew = { path = "crates/subd-yew" }
twitch_api2 = { version = "0.6.1", features = [ "helix", "twitch_oauth2", "reqwest" ]}
reqwest = "0.11.10"
obws = "0.9.1"
either = "1.6.1"
yew = "0.19"
twitch-irc = { version = "4.0.0", default-features = false, features = [
    "with-serde",
    "refreshing-token-rustls-native-roots",
    "transport-tcp-rustls-native-roots"
] }

[workspace]
members = ["crates/*"]

[profile.dev.package.sqlx-macros]
opt-level = 3
