[package]

name = "ai_clones"
version = "0.0.1"
edition = "2021"

[dependencies]

subd-types = { path = "../subd-types/" }
stable_diffusion = { path = "../stable_diffusion/" }
obs_service = { path = "../obs_service/" }
obws = "0.10"
chrono.workspace = true
serde.workspace = true
anyhow.workspace = true
