[package]
name = "ai_friends"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

fal_ai = { path = "../fal_ai/" }
csv = "1.1"
chrono = "*"
rgb = "0.8"
axum = "0.5.4"
futures = "0.3.21"
obws = "0.10"
either = "1.6.1"
# fal-rust = { git = "https://github.com/davidbegin/fal-rust" }
fal-rust = { path = "../../../fal-rust" }
subd-types = { path = "../subd-types/" }
twitch_chat = { path = "../twitch_chat/" }

# Fixes skip bug skip_one
rodio = { git = "https://github.com/RustAudio/rodio", rev = "023ee21e21808685336b654a1c167ea0c182b4e8", default-features = false, features = [ "symphonia-all" ] }

# rodio = { version = "0.19.0", default-features = false, features = [ "symphonia-all" ] }
clap = { version = "4.4.11", features = ["derive"] }
ytextract = "0.11.0"
# youtube_dl = { version = "0.7.0", default-features = false, features = [ "yt-dlp" ] }
youtube_dl = { git = "https://github.com/twiclo/youtube-dl-rs", rev = "dbb9a878208175dee95533a6d2bd02344b8094bf", default-features = false, features = [ "yt-dlp" ] }
psl = "2.0.89"
dotenv.workspace = true
rustrict = { version = "0.4.18", features = [ "customize" ] }

# iter-skak = "0.1.0"

# Tracing related crates
tracing.workspace = true
tracing-subscriber.workspace = true
rand = "0.8.5"
async-trait.workspace = true
twitter-v2 = "0.1.8"
renet = "0.0.12"
stdio-override = "0.1.3"
elevenlabs-api = "0.1.1"
# elevenlabs-api = { path = "../elevenlabs-api" }
libc = "0.2.150"
futures-util = "0.3.29"
actix = "0.13.1"
warp = "0.3.6"
# openai = "1.0.0-alpha.13"
openai = { path = "../../../openai" }
twitch_api = "0.7.0-rc.7"
twitch_oauth2 = "0.12.7"
askama = "0.12.1"
base64 = "0.21.5"
bigdecimal = "0.4.2"
use = "0.0.1-pre.0"
num-bigint = "0.4.4"
num-traits = "0.2.17"
serde_repr = "0.1.18"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
case = "1.0.0"
convert_case = "0.6.0"
serde_with = { features = ["macros"], version = "3.4.0"}
url = "2.5.2"
regex = "1.10.6"
mime_guess = "2.0.5"
bytes = "1.7.1"
serde.workspace = true
anyhow.workspace = true
reqwest.workspace = true
serde_json.workspace = true
tokio.workspace = true

twitch-irc = { version = "4.0.0", default-features = false, features = [
    "with-serde",
    "refreshing-token-rustls-native-roots",
    "transport-tcp-rustls-native-roots"
] }
