[package]
name = "ai_movie_trailers"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

subd-utils = { path = "../subd-utils/" }
subd-types = { path = "../subd-types/" }
subd-audio = { path = "../subd-audio/" }
twitch_chat = { path = "../twitch_chat/" }

twitch-irc.workspace = true
serde_json.workspace = true
tokio.workspace = true
anyhow.workspace = true
reqwest.workspace = true
serde.workspace = true

regex = "1.10.6"
mime_guess = "2.0.5"
bytes = "1.7.1"
base64 = "0.21.5"

# Fixes skip bug skip_one
rodio = { git = "https://github.com/RustAudio/rodio", rev = "023ee21e21808685336b654a1c167ea0c182b4e8", default-features = false, features = [ "symphonia-all" ] }
