[package]
name = "ai_scenes_coordinator"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true

serde_json.workspace = true
sqlx.workspace = true
subd-types = { path = "../subd-types/" }
subd-audio = { path = "../subd-audio/" }
ai_friends = { path = "../ai_friends/" }
twitch_stream_state = { path = "../twitch_stream_state/" }
stream_character = { path = "../stream_character/" }
ai_movie_trailers = { path = "../ai_movie_trailers/" }

obws = "0.10.0"
# obws.workspace = true
# Twitch Deps
twitch-irc.workspace = true

elevenlabs-api = "0.1.1"
# elevenlabs-api = { path = "../../../elevenlabs-api" }
rand = "0.8.5"
chrono.workspace = true
serde.workspace = true
