[package]
name = "fal_ai"
version = "0.0.1"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

fal-rust = { path = "../../../fal-rust" }
subd-types = { path = "../subd-types/" }
subd-image-utils= { path = "../subd-image-utils/" }
bytes = "1.7.1"
serde.workspace = true
anyhow.workspace = true
serde_json.workspace = true
tokio.workspace = true
chrono = "*"
regex = "1.10.6"
base64 = "0.22.1"

[dev-dependencies]

test-tag = "*"
