[package]
name = "obs_3d_filter"
version = "0.0.1"
edition = "2021"

[dependencies]

# subd-types = { path = "../subd-types/" }
# stable_diffusion = { path = "../stable_diffusion/" }
# obs_service = { path = "../obs_service/" }
# obs_move_transition = { path = "../obs_move_transition/" }
# obws = "0.10"
# chrono.workspace = true
serde_repr = "0.1.18"
serde = { workspace = true, features = ["derive"] }
# anyhow.workspace = true
#
# # Test
# tokio.workspace = true
