[package]

name = "obs_bootstrap"
version = "0.0.1"
edition = "2021"

[dependencies]

subd-types.workspace = true
# stable_diffusion = { path = "../stable_diffusion/" }
# obs_service = { path = "../obs_service/" }
# obs_move_transition = { path = "../obs_move_transition/" }
obws.workspace = true
# chrono.workspace = true
serde.workspace = true
anyhow.workspace = true
serde_json.workspace = true

# Test
# tokio.workspace = true
