[package]

name = "obs_move_transition"
version = "0.0.1"
edition = "2021"

[dependencies]

anyhow.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
obws.workspace = true

serde_repr = "0.1.18"
strum = { version = "0.25.0", features = ["strum_macros", "derive"] }
case = "1.0.0"
convert_case = "0.6.0"

# This is only needed for tests
obs_service = { path = "../obs_service/" }
