[package]
name = "subd-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subd-types = { path = "../subd-types/" }
subd-gh = { path = "../subd-gh/" }

anyhow = "1.0.57"
chrono = "0.4.19"
once_cell = "1.10.0"
sqlx = { version = "0.5", features = [ "runtime-tokio-rustls", "sqlite" ] }
uuid = { version = "1.0.0", features = [ "v4" ] }
tokio = { version = "1.18", features = [ "macros", "rt" ] }
rodio = { git = "https://github.com/RustAudio/rodio", rev = "55d957f", default-features = false, features = [ "symphonia-all" ] }
