[package]
name = "subd-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subd-types = { path = "../subd-types/" }
subd-gh = { path = "../subd-gh/" }

anyhow.workspace = true
chrono.workspace = true
once_cell.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = [ "macros", "rt" ] }

uuid = { version = "1.0.0", features = [ "v4" ] }
rodio = { git = "https://github.com/RustAudio/rodio", rev = "55d957f", default-features = false, features = [ "symphonia-all" ] }
