[package]
name = "subd-db"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

subd-types = { path = "../subd-types/" }
anyhow.workspace = true
sqlx.workspace = true
tokio = { workspace = true, features = [ "macros", "rt" ] }
