[package]
name = "subd-elevenlabs"
version = "0.0.1"
edition = "2021"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
rand = "0.8.5"
serde.workspace = true
serde_json.workspace = true
sqlx.workspace = true

subd-types = { path = "../subd-types/" }
stream_character = { path = "../stream_character//" }
tokio.workspace = true
