[package]
name = "subd-gh"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
subd-types = { path = "../subd-types/" }

anyhow.workspace = true
graphql_client = { version = "0.10.0", features = [ "reqwest" ] }
hyper = "0.14.18"
reqwest.workspace = true
serde.workspace = true
tokio.workspace = true
tracing.workspace = true

[package.metadata.cargo-machete]
ignored = ["serde"]
