[package]
name = "subd-image-utils"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow.workspace = true
base64 = "0.22.1"
bytes = "1.7.1"
mime_guess = "2.0.5"
reqwest.workspace = true
tokio.workspace = true
