[package]
name = "subd-macros"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow.workspace = true

quote = "1.0"
syn = { version = "2.0.77", features = ["derive", "full"] }

[lib]
proc-macro = true
