[package]
name = "subd-twitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
reqwest.workspace = true
tokio = { workspace = true, features = [ "rt-multi-thread", "macros", "rt" ] }

irc = { version = "0.15.0", features = [ "serde", "serde_derive", "json", "serde_json" ] }
twitch_api = { version = "0.7.0-rc.7" , features = [ "helix", "twitch_oauth2", "reqwest", "pubsub", "tmi" ]}
