[package]
name = "subd-twitch"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

anyhow.workspace = true
reqwest.workspace = true
twitch_api = { version = "0.7.0-rc.7" , features = [ "helix", "twitch_oauth2", "reqwest", "pubsub", "tmi" ]}
